# spraply

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  DEV_SETUP.md  LICENSE  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docker-publish.yml  manual-version-bump.yml
backend/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  bootstrap.py  config.py  db.py  dependencies.py  main.py  models.py  security.py
backend/app/api/: router.py
backend/app/api/v1/: common.py  core.py  plan.py  user.py
docker/: .env.example  README.md  docker-compose.local.yml  docker-compose.yml
docker/nginx/: entrypoint.sh  nginx.conf
docs/: docusaurus.config.ts  sidebars.ts
docs/docs/: intro.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml
scripts/: setup-dev.sh  sync-labels.sh
tutorials/Claude-3.7-&-Spraply-stock-analyzer/: Claude-3.7-&-Spraply-stock-analyzer.py  README.md  Stock_Analyzer_Claude-3.7_Spraply.ipynb
tutorials/Company name and Objective (search filter scrape)/: .env.example  Company_and_Objective_Tutorial.ipynb  README.md  WORKFLOW_DIAGRAM.md  main.py  requirements.txt
tutorials/Deep Search (Langgraph Spraply LiteLLM )/: .env.example  README.md  app.py  configs.py  graph.py  requirements.txt  tools.py  utils.py
tutorials/DeepSeekR1_Spraply_live_chat_with_your_website/: DeepSeek_Spraply_LiveChat_Tutorial.ipynb  (+2 more)
(+53 files in other folders)
